All completed Nostra clone

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <ul id="sidebar-list">
             <li id="sidebar-list__links"><a href="#offerBar">Home</a></li>
-            <li id="sidebar-list__links"><a href="new">New Arrival</a></li>
+            <li id="sidebar-list__links"><a href="#new">New Arrival</a></li>
             <li id="sidebar-list__links"><a href="#most-wanted">Most Wanted</a></li>
             <li id="sidebar-list__links"><a href="./collections.html">Collections</a></li>
             <li id="sidebar-list__links"><a href="./contactUs.html">Contact Us</a></li>
